change header and footer

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,12 +10,14 @@
 @import '../variables.css';
 
 :root {
-  --brand-color: #61dafb;
+  --brand-color: #ffffff;
 }
 
 .root {
-  background: #373277;
+  background: #2c3e50;
   color: #fff;
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 700;
 }
 
 .container {
@@ -27,7 +29,7 @@
 .brand {
   color: color(var(--brand-color) lightness(+10%));
   text-decoration: none;
-  font-size: 1.75em; /* ~28px */
+  font-size: 2.00em; /* ~28px */
 }
 
 .brandTxt {
