--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,15 +10,30 @@
 @import '../variables.css';
 
 .root {
-  background: #333;
   color: #fff;
 }
 
-.container {
-  margin: 0 auto;
+.infoContainer {
   padding: 20px 15px;
-  max-width: var(--max-content-width);
   text-align: center;
+  background: #2c3e50;
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+.infoSpan {
+  display: table-cell;
+}
+
+.container {
+  padding: 20px 15px;
+  text-align: center;
+  background: #233140;
+  font-size: large;
+}
+
+.icon {
+  font-size: 40px;
 }
 
 .text {
