--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,6 +34,17 @@
 
 .brandTxt {
   margin-left: 10px;
+  text-decoration: none;
+}
+
+.brandTxt:hover {
+  margin-left: 10px;
+  font-size: 110%;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 .nav {
