--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -15,7 +15,8 @@
   display: inline-block;
   padding: 3px 8px;
   text-decoration: none;
-  font-size: 1.125em; /* ~18px */
+  font-size: 20px; /* ~18px */
+  margin-top: 5px;
 }
 
 .link,
@@ -26,6 +27,7 @@
 
 .link:hover {
   color: rgba(255, 255, 255, 1);
+  text-decoration: none;
 }
 
 .highlight {
